[add]: functional buttons for routing [fix]: overflow styling

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,24 +1,30 @@
+.dog-toolbar {
+    position: fixed;
+    height: 48px;
+    top: 0;
+    z-index: 2;
+}
+
 .header {
-  height: 350px;
-  background: url("../assets/img/header-grass.jpg") no-repeat;
-  text-align: center;
-  /*background: linear-gradient(yellow, green);*/
+    height: 330px;
+    background: url("../assets/img/header-grass.jpg") no-repeat;
+    text-align: center;
+    /*background: linear-gradient(yellow, green);*/
 }
 
 .hearer-title {
-  padding: 16px;
-  color: #FFEA00;
+    color: #FFEA00;
 }
 
 .dog-paw {
-  animation: beat 2s ease-out infinite alternate;
+    animation: beat 2s ease-out infinite alternate;
 }
 
 @keyframes beat {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0.8);
-  }
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0.8);
+    }
 }
