--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 html, body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
-  background: #B9F6CA;
+    background: #B9F6CA;
 }
 
 .height-fix {
-  position: relative;
-  top: -42px;
+    position: relative;
+    padding: 16px;
 }
+
